# spirit

./: .gitignore  BUILD.bazel  WORKSPACE
.github/: pull.yml
include/boost/spirit/home/karma/: meta_compiler.hpp
include/boost/spirit/home/karma/auto/: meta_create.hpp
include/boost/spirit/home/karma/char/: char.hpp
include/boost/spirit/home/karma/detail/: alternative_function.hpp  generate_auto.hpp
include/boost/spirit/home/karma/directive/: center_alignment.hpp  left_alignment.hpp  right_alignment.hpp
include/boost/spirit/home/karma/numeric/: bool.hpp  int.hpp  real.hpp  uint.hpp
include/boost/spirit/home/karma/stream/: stream.hpp
include/boost/spirit/home/karma/stream/detail/: format_manip_auto.hpp
include/boost/spirit/home/karma/string/: lit.hpp
include/boost/spirit/home/lex/: meta_compiler.hpp
include/boost/spirit/home/qi/: meta_compiler.hpp
include/boost/spirit/home/qi/auto/: meta_create.hpp
include/boost/spirit/home/qi/char/: char.hpp
include/boost/spirit/home/qi/detail/: parse_auto.hpp
include/boost/spirit/home/qi/directive/: lexeme.hpp  no_skip.hpp  skip.hpp
include/boost/spirit/home/qi/numeric/detail/: numeric_utils.hpp
include/boost/spirit/home/qi/string/: lit.hpp
include/boost/spirit/home/support/: adapt_adt_attributes.hpp  attributes.hpp  attributes_fwd.hpp  sequence_base_id.hpp
include/boost/spirit/home/support/detail/: make_cons.hpp
include/boost/spirit/home/support/utree/: utree.hpp  utree_traits.hpp
include/boost/spirit/home/support/utree/detail/: utree_detail2.hpp
include/boost/spirit/home/x3/core/: parser.hpp
include/boost/spirit/home/x3/directive/: lexeme.hpp  no_skip.hpp  skip.hpp
include/boost/spirit/home/x3/support/numeric_utils/detail/: extract_int.hpp
include/boost/spirit/home/x3/support/traits/: attribute_of.hpp  has_attribute.hpp  is_substitute.hpp
repository/test/qi/: keywords.cpp
test/qi/: plus.cpp  repeat.cpp
test/x3/: repeat.cpp
