
cc_library(
	name = "spirit",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_typeof//:typeof",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_align//:align",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_pool//:pool",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_regex//:regex",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_io//:io",
		"@com_github_bazelboost_proto//:proto",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_endian//:endian",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_serialization//:serialization",
		"@com_github_bazelboost_variant//:variant",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_foreach//:foreach",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_filesystem//:filesystem",
		"@com_github_bazelboost_phoenix//:phoenix"
	],
)
