
cc_library(
	name = "spirit",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_typeof//:typeof",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_thread//:thread",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_pool//:pool",
		"@com_github_bazelboost_regex//:regex",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_variant//:variant",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_iostreams//:iostreams",
		"@com_github_bazelboost_algorithm//:algorithm",
		"@com_github_bazelboost_foreach//:foreach",
		"@com_github_bazelboost_proto//:proto",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_unordered//:unordered",
		"@com_github_bazelboost_predef//:predef",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_serialization//:serialization",
		"@com_github_bazelboost_function_types//:function_types",
		"@com_github_bazelboost_io//:io",
		"@com_github_bazelboost_endian//:endian",
		"@com_github_bazelboost_tti//:tti",
		"@com_github_bazelboost_filesystem//:filesystem",
		"@com_github_bazelboost_locale//:locale",
		"@com_github_bazelboost_phoenix//:phoenix"
	],
)
